	PR c++/85731 - wrong error with qualified-id in template.

* semantics.c (finish_qualified_id_expr): build_qualified_name
	for unbound names in the current class.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@261196 138bc75d-0d04-0410-961f-82ee72b054a4